--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
     <title>Canvas Example</title>
 </head>
 <body>
-    <script src="src/main.js"></script>
+    <script type="module" src="src/main.js"></script>
 </body>
 </html>
